# watchface-rs

./: .gitignore  Cargo.toml  LICENSE  check.sh
derive/: Cargo.toml
derive/src/: lib.rs
src/: common.rs  lib.rs  miband.rs  parser.rs  preview.rs
watchface_rs_derive/: Cargo.toml
watchface_rs_derive/src/: lib.rs
