[package]
name = "watchface-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["derive"]

[dependencies]
png = "0.17.13"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
winnow = "0.6.5"
derive = { path = "derive" }
image = { version = "0.25.1", features = ["png"], default-features = false}
tiny-skia = "0.11.4"
